feat: 新增依使用者 ID 更新使用者名稱的 API
